gitops/platform/lab-ingresses/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-local-ingress
  namespace: default # приложение будет в default namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app # так называется сервис в примере ArgoCD
                port:
                  number: 80
